Skip to content

file(REAL_PATH), get_filename_component REALPATH not resolving symlinks in Windows

get_filename_component REALPATH is reaturning the symlink path instead of the pointed file/directory path. I have a patch to make it work but after reviewing the issue #16926 (closed), I need to change my fix to rely in libuv instead of WindowsAPI.

On the other hand, does it require a new policy? get_filename_component documentation says nothing about not working in Windows so it seems more a bug than a behaviour change to me.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information